Have endpoint to send client secret to user for stripe payment (#281)
* move files

* get functionality working (no tests or safeguarding)

* add caching of session

* add required metadata

* add new tests

* update success message

* add default expiry time

* update return url

* remove teneary from createCheckoutSession

* rename method

* add publishable key to workflows

* remove magic number

* improve comments

* move membership types

* update imports

* add stripe id to user

* generate routes

* update docs

* update docs

* run codegen

* add back 200

* fix tests...

* add comments on mocks

* add check for active product

* add comment

* add session id to return url

* fix nits

* remove forced email
